tests/fixtures/invalid/pow_str_none_bool.py
# Cannot call pow() with Str, None, Bool
x = pow("hello", None, True)
